# langchain-rag-project

./: .dockerignore  .gitignore  README.md  pyproject.toml
src/experiments/: experiment.ipynb
src/implementation/: answer.py  ingest.py
tests/: conftest.py  test_answer.py  test_ingest.py  test_integration.py
