[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.72.1",
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.4",
    "datasets==3.6.0",
    "feedparser>=6.0.12",
    "google-generativeai>=0.8.5",
    "gradio>=5.49.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter-dash>=0.4.2",
    "langchain>=1.0.5",
    "langchain-anthropic>=1.0.3",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-experimental>=0.4.0",
    "langchain-huggingface>=1.0.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.2",
    "langchain-text-splitters>=1.0.0",
    "matplotlib>=3.10.7",
    "modal>=1.2.2",
    "nbformat>=5.10.4",
    "numpy>=2.3.4",
    "ollama>=0.6.0",
    "openai>=2.7.2",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "protobuf==3.20.2",
    "psutil>=7.1.3",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "sentence-transformers>=5.1.2",
    "setuptools>=80.9.0",
    "speedtest-cli>=2.1.3",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "wandb>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]
omit = ["src/experiments/*"]
